[GPUP] media/video-set-rate-from-pause.html fails https://bugs.webkit.org/show_bug.cgi?id=223386 <rdar://problem/75533945>

Reviewed by Jer Noble.

Source/WebCore:

No new tests, this fixes an existing test.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::setPlaybackRate): Remove the `m_player->rate() != rate`
check before setting player rate, there may be a change in flight and the test
is already done in the player itself.

* platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.cpp:
(WebCore::MediaPlayerPrivateAVFoundation::invalidateCachedDuration): Drive-by fix:
update logging.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::setPlayerRate): Don't set m_cachedRate,
it is already done in the rateDidChange callback from AVFoundation.
(WebCore::MediaPlayerPrivateAVFoundationObjC::rateDidChange): Drive-by fix: do nothing
when the rate hasn't changed.

LayoutTests:

* platform/wk2/TestExpectations: Remove test that passes.


Canonical link: https://commits.webkit.org/235430@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274589 268f45cc-cd09-0410-ab3c-d52691b4dbfc